<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Update">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kotei"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/date_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/date"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/table2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/kotei2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kotei2"
                    android:textSize="24sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/c_name"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/table3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/kotei3"
                    android:textSize="24sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="24sp" />
            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tablelayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/kotei6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="right|end"
                android:text="@string/kotei4"
                android:textSize="24sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/Row1_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:background="@drawable/frame_style"
                android:clickable="false"
                android:ellipsize="end"
                android:ems="5"
                android:focusable="true"
                android:gravity="end"
                android:hint="数値を入力"
                android:imeOptions="actionGo"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:textSize="24sp"
                tools:ignore="HardcodedText,LabelFor,RtlHardcoded"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/Row1_Text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="5"
                android:focusable="false"
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

        </TableRow>

        <TableRow
            android:id="@+id/Row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/kotei7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="right|end"
                android:text="@string/kotei5"
                android:textSize="24sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/Row2_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="5"
                android:focusable="false"
                android:gravity="end"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/Tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="5"
                android:focusable="false"
                android:text="@string/Tax"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

        </TableRow>

        <TableRow
            android:id="@+id/Row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/kotei8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="right|end"
                android:text="@string/kotei8"
                android:textSize="24sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/Row3_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="5"
                android:focusable="false"
                android:gravity="right"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/Row3_Text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="5"
                android:focusable="false"
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablelayout2"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:id="@+id/Button_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Not_yet_Button"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei9"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/customer_Button"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei11"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/Group_Button"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei12"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/Group_K_jun_Button"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei13"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/end_app"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei14"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:id="@+id/Button_table2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei15"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button7"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei16"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/up"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/up"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/down"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/down"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/Check_Button"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/kotei17"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/Update"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/background_dark"
        android:text="@string/mi"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>